--- a/3_Game_Activities/4_Super_Virtual_World.html
+++ b/3_Game_Activities/4_Super_Virtual_World.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../1_Introduction.html"><strong aria-hidden="true">1.</strong> Shroom Kingdom</a></li><li class="chapter-item expanded "><a href="../2_User_Onboarding.html"><strong aria-hidden="true">2.</strong> User Onboarding</a></li><li class="chapter-item expanded "><a href="../3_Game_Activities/index.html"><strong aria-hidden="true">3.</strong> Game Activities</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../3_Game_Activities/1_Building_Levels.html"><strong aria-hidden="true">3.1.</strong> Building Levels</a></li><li class="chapter-item expanded "><a href="../3_Game_Activities/2_Playing_Levels.html"><strong aria-hidden="true">3.2.</strong> Playing Levels</a></li><li class="chapter-item expanded "><a href="../3_Game_Activities/3_Challenges.html"><strong aria-hidden="true">3.3.</strong> Challenges</a></li><li class="chapter-item expanded "><a href="../3_Game_Activities/4_Super_Virtual_Lands.html" class="active"><strong aria-hidden="true">3.4.</strong> Virtual Lands</a></li></ol></li><li class="chapter-item expanded "><a href="../4_Token_Economics.html"><strong aria-hidden="true">4.</strong> Token Economics</a></li><li class="chapter-item expanded "><a href="../5_USPs.html"><strong aria-hidden="true">5.</strong> USPs</a></li><li class="chapter-item expanded "><a href="../6_Decentralized_Organization.html"><strong aria-hidden="true">6.</strong> Decentralized Organization</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../1_Introduction.html"><strong aria-hidden="true">1.</strong> Shroom Kingdom</a></li><li class="chapter-item expanded "><a href="../2_User_Onboarding.html"><strong aria-hidden="true">2.</strong> User Onboarding</a></li><li class="chapter-item expanded "><a href="../3_Game_Activities/index.html"><strong aria-hidden="true">3.</strong> Game Activities</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../3_Game_Activities/1_Building_Levels.html"><strong aria-hidden="true">3.1.</strong> Building Levels</a></li><li class="chapter-item expanded "><a href="../3_Game_Activities/2_Playing_Levels.html"><strong aria-hidden="true">3.2.</strong> Playing Levels</a></li><li class="chapter-item expanded "><a href="../3_Game_Activities/3_Challenges.html"><strong aria-hidden="true">3.3.</strong> Challenges</a></li><li class="chapter-item expanded "><a href="../3_Game_Activities/4_Super_Virtual_World.html" class="active"><strong aria-hidden="true">3.4.</strong> Virtual Lands</a></li></ol></li><li class="chapter-item expanded "><a href="../4_Token_Economics.html"><strong aria-hidden="true">4.</strong> Token Economics</a></li><li class="chapter-item expanded "><a href="../5_USPs.html"><strong aria-hidden="true">5.</strong> USPs</a></li><li class="chapter-item expanded "><a href="../6_Decentralized_Organization.html"><strong aria-hidden="true">6.</strong> Decentralized Organization</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -143,7 +143,19 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="virtual-lands"><a class="header" href="#virtual-lands">Virtual Lands</a></h1>
+                        <h1 id="super-virtual-world"><a class="header" href="#super-virtual-world">Super Virtual World</a></h1>
+<p>In Shroom Kingdom everyone can build his/her own Kingdom!</p>
+<p>Super Virtual Worlds (SVW) are a form of Virtual Lands and are our interpretation of
+<a href="https://supermariomaker2.fandom.com/wiki/World_Maker">Super Worlds</a>.
+SVWs can be purchased on our (upcoming) NFT marketplace in exchange for NEAR tokens.</p>
+<p>SVWs are 2-dimensional top-down maps, that can be edited by its owner.
+You can place your NFT levels and connect them via paths to let other players
+have a more challenging and more fun way to play through your list of levels,
+thus it is an easy way to advertise them.</p>
+<p>To make SVWs even more compelling there will also be a variety of NFTs that can be additionally
+placed on the map and players can interact with them to get temporary upgrades or boosts.
+These special NFTs can be minted by all players after achieving several milestones or
+you can get them as a reward from <a href="3_Game_Activities/3_Challenges.html">challenges</a>.</p>
 
                     </main>
 
