--- a/print.html
+++ b/print.html
@@ -514,6 +514,51 @@ can still become a bottleneck in the overall architecture of the application, e.
 <li>free-to-play. No initial investment needed</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="decentralized-autonomous-organization"><a class="header" href="#decentralized-autonomous-organization">Decentralized Autonomous Organization</a></h1>
+<p>This chapter will talk about the way the community is incentivised to participate and how this system of a
+Decentralized Autonomous Organization (DAO) works.</p>
+<h2 id="what-a-dao-is"><a class="header" href="#what-a-dao-is">What a DAO is</a></h2>
+<p>A DAO is a form of government that is responsible for the blockchain.
+It has to follow rules that are transparent to everyone and as many decisions as
+possible will be decided following these pre-defined rules.
+This will happen either automatically (through contracts), by the whole community or by a council.
+How to become a member and who is a member should be transparent to the community and in theory these people
+are supposed to make decisions that represent the community in a pre-determined form,
+rather than making decisions for their own good.
+The community then can make proposals that are then voted for or against within these guidelines.</p>
+<h2 id="the-shroom-kingdom-dao"><a class="header" href="#the-shroom-kingdom-dao">The Shroom Kingdom DAO</a></h2>
+<p>For Shroom Kingdom <a href="//v2.sputnik.fund/#/shrm.sputnik-dao.near" target="_blank" rel="noreferrer noopener">
+Sputnik DAO<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
+<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+<polyline points="15 3 21 3 21 9"></polyline>
+<line x1="10" y1="14" x2="21" y2="3"></line>
+</svg></a> will be used.
+This is a DAO of DAOs that has tools to make the process of proposals and votes possible for small DAOs.
+Shroom Kingdom DAO will have a council, which at the time of writing only consists of the founder.
+More members will be added as the project grows and matures.</p>
+<p>The members of the DAO or temporary supporters of the project will be able to receive payouts via Sputnik DAO,
+that will be approved by the council or specific members of it.
+Applications to join the DAO can be made on Shroom Kingdom's
+<a href="//discord.gg/SPZsgSe" target="_blank" rel="noreferrer noopener">Discord server<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
+<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+<polyline points="15 3 21 3 21 9"></polyline>
+<line x1="10" y1="14" x2="21" y2="3"></line>
+</svg></a>,
+where you can find a list of open positions and available tasks.</p>
+<h2 id="workload-and-payouts"><a class="header" href="#workload-and-payouts">Workload And Payouts</a></h2>
+<p>The payout will be in SHRM and depends on the task and position.
+After the succesful launch of the IDO, it will also be possible to get payouts in NEAR for certain tasks and positions.
+In general, to receive payouts you need a <a href="//wallet.near.org/" target="_blank" rel="noreferrer noopener">
+NEAR wallet<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
+<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+<polyline points="15 3 21 3 21 9"></polyline>
+<line x1="10" y1="14" x2="21" y2="3"></line>
+</svg></a> and there is no predefined workload.
+In general the DAO is looking for self-motivated and self-determined members to join them.
+Every member should be able to do whatever is possible and enjoyable for him, depending on his own circumstances.</p>
+<p>For more information about the token economics of SHRM see <a href="4_Token_Economics.html">Token Economics</a>.</p>
 
                     </main>
 
