--- a/2_Play_To_Earn.html
+++ b/2_Play_To_Earn.html
@@ -34,7 +34,7 @@
                 <link rel="stylesheet" href="src/css/main.css">
         
         
-        <script defer data-domain="whitepaper.shroomkingdom.net" src="https://plausible.io/js/plausible.js"></script>
+        <script defer data-domain="whitepaper.shroomkingdom.net" src="https://plausible.io/js/plausible.outbound-links.js"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
