deploy: 3a9e8cf63df7f0ae603ee4645fcdf2845461fd7d

--- a/5_Game_Activities.html
+++ b/5_Game_Activities.html
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="1_Introduction.html"><strong aria-hidden="true">1.</strong> Shroom Kingdom</a></li><li class="chapter-item expanded "><a href="2_Play_To_Earn.html"><strong aria-hidden="true">2.</strong> Play to Earn</a></li><li class="chapter-item expanded "><a href="3_Legality.html"><strong aria-hidden="true">3.</strong> Legality</a></li><li class="chapter-item expanded "><a href="4_User_Onboarding.html"><strong aria-hidden="true">4.</strong> User Onboarding</a></li><li class="chapter-item expanded "><a href="5_Game_Activities.html" class="active"><strong aria-hidden="true">5.</strong> Game Activities</a></li><li class="chapter-item expanded "><a href="6_Token_Economics.html"><strong aria-hidden="true">6.</strong> Token Economics</a></li><li class="chapter-item expanded "><a href="7_USPs.html"><strong aria-hidden="true">7.</strong> USPs</a></li><li class="chapter-item expanded "><a href="8_DAO.html"><strong aria-hidden="true">8.</strong> DAO</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="1_Introduction.html"><strong aria-hidden="true">1.</strong> Shroom Kingdom</a></li><li class="chapter-item expanded "><a href="2_Play_To_Earn.html"><strong aria-hidden="true">2.</strong> Play to earn</a></li><li class="chapter-item expanded "><a href="3_How_To_Play.html"><strong aria-hidden="true">3.</strong> How to play</a></li><li class="chapter-item expanded "><a href="4_User_Onboarding.html"><strong aria-hidden="true">4.</strong> User Onboarding</a></li><li class="chapter-item expanded "><a href="5_Game_Activities.html" class="active"><strong aria-hidden="true">5.</strong> Game Activities</a></li><li class="chapter-item expanded "><a href="6_Token_Economics.html"><strong aria-hidden="true">6.</strong> Token Economics</a></li><li class="chapter-item expanded "><a href="7_USPs.html"><strong aria-hidden="true">7.</strong> USPs</a></li><li class="chapter-item expanded "><a href="8_DAO.html"><strong aria-hidden="true">8.</strong> DAO</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -159,7 +159,12 @@
 <p>In Shroom Kingdom everyone can build his/her own Kingdom!</p>
 <p>Super Virtual Worlds (SVW) are a form of Virtual Lands and are our interpretation of
 <a href="//supermariomaker2.fandom.com/wiki/World_Maker" target="_blank" rel="noreferrer noopener">
-Super Worlds{{#include ../icons/link.svg}}</a>.
+Super Worlds<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
+<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+<polyline points="15 3 21 3 21 9"></polyline>
+<line x1="10" y1="14" x2="21" y2="3"></line>
+</svg></a>.
 SVWs can be purchased on our (upcoming) NFT marketplace in exchange for NEAR tokens.</p>
 <p>SVWs are 2-dimensional top-down maps, that can be edited by its owner.
 You can place your NFT levels and connect them via paths to let other players
