--- a/4_User_Onboarding.html
+++ b/4_User_Onboarding.html
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="1_Introduction.html"><strong aria-hidden="true">1.</strong> Shroom Kingdom</a></li><li class="chapter-item expanded "><a href="2_Play_To_Earn.html"><strong aria-hidden="true">2.</strong> Play to Earn</a></li><li class="chapter-item expanded "><a href="3_Legality.html"><strong aria-hidden="true">3.</strong> Legality</a></li><li class="chapter-item expanded "><a href="4_User_Onboarding.html" class="active"><strong aria-hidden="true">4.</strong> User Onboarding</a></li><li class="chapter-item expanded "><a href="5_Game_Activities.html"><strong aria-hidden="true">5.</strong> Game Activities</a></li><li class="chapter-item expanded "><a href="6_Token_Economics.html"><strong aria-hidden="true">6.</strong> Token Economics</a></li><li class="chapter-item expanded "><a href="7_USPs.html"><strong aria-hidden="true">7.</strong> USPs</a></li><li class="chapter-item expanded "><a href="8_DAO.html"><strong aria-hidden="true">8.</strong> DAO</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="1_Introduction.html"><strong aria-hidden="true">1.</strong> Shroom Kingdom</a></li><li class="chapter-item expanded "><a href="2_Play_To_Earn.html"><strong aria-hidden="true">2.</strong> Play to earn</a></li><li class="chapter-item expanded "><a href="3_How_To_Play.html"><strong aria-hidden="true">3.</strong> How to play</a></li><li class="chapter-item expanded "><a href="4_User_Onboarding.html" class="active"><strong aria-hidden="true">4.</strong> User Onboarding</a></li><li class="chapter-item expanded "><a href="5_Game_Activities.html"><strong aria-hidden="true">5.</strong> Game Activities</a></li><li class="chapter-item expanded "><a href="6_Token_Economics.html"><strong aria-hidden="true">6.</strong> Token Economics</a></li><li class="chapter-item expanded "><a href="7_USPs.html"><strong aria-hidden="true">7.</strong> USPs</a></li><li class="chapter-item expanded "><a href="8_DAO.html"><strong aria-hidden="true">8.</strong> DAO</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -178,7 +178,7 @@ technologies with astounding UX.</p>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                                                    <a rel="prev" href="3_Legality.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                                    <a rel="prev" href="3_How_To_Play.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
                         
@@ -192,7 +192,7 @@ technologies with astounding UX.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                                    <a rel="prev" href="3_Legality.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                    <a rel="prev" href="3_How_To_Play.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
                 
