--- a/6_Token_Economics.html
+++ b/6_Token_Economics.html
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="1_Introduction.html"><strong aria-hidden="true">1.</strong> Shroom Kingdom</a></li><li class="chapter-item expanded "><a href="2_Play_To_Earn.html"><strong aria-hidden="true">2.</strong> Play to Earn</a></li><li class="chapter-item expanded "><a href="3_Legality.html"><strong aria-hidden="true">3.</strong> Legality</a></li><li class="chapter-item expanded "><a href="4_User_Onboarding.html"><strong aria-hidden="true">4.</strong> User Onboarding</a></li><li class="chapter-item expanded "><a href="5_Game_Activities.html"><strong aria-hidden="true">5.</strong> Game Activities</a></li><li class="chapter-item expanded "><a href="6_Token_Economics.html" class="active"><strong aria-hidden="true">6.</strong> Token Economics</a></li><li class="chapter-item expanded "><a href="7_USPs.html"><strong aria-hidden="true">7.</strong> USPs</a></li><li class="chapter-item expanded "><a href="8_DAO.html"><strong aria-hidden="true">8.</strong> DAO</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="1_Introduction.html"><strong aria-hidden="true">1.</strong> Shroom Kingdom</a></li><li class="chapter-item expanded "><a href="2_Play_To_Earn.html"><strong aria-hidden="true">2.</strong> Play to earn</a></li><li class="chapter-item expanded "><a href="3_How_To_Play.html"><strong aria-hidden="true">3.</strong> How to play</a></li><li class="chapter-item expanded "><a href="4_User_Onboarding.html"><strong aria-hidden="true">4.</strong> User Onboarding</a></li><li class="chapter-item expanded "><a href="5_Game_Activities.html"><strong aria-hidden="true">5.</strong> Game Activities</a></li><li class="chapter-item expanded "><a href="6_Token_Economics.html" class="active"><strong aria-hidden="true">6.</strong> Token Economics</a></li><li class="chapter-item expanded "><a href="7_USPs.html"><strong aria-hidden="true">7.</strong> USPs</a></li><li class="chapter-item expanded "><a href="8_DAO.html"><strong aria-hidden="true">8.</strong> DAO</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -156,7 +156,7 @@ won't suffer from inflation or deflation.</p>
 do not yet exist on-chain.
 Instead they will be stored in an off-chain database first.
 The user can then decide to mint its SHRM tokens by calling a Smart Contract.
-This mechanism is explained more in depth in the <a href="#smart-contract-details">Smart Contract details</a></p>
+This mechanism is explained more in depth in the <a href="#smart-contract-details">Smart Contract details</a>.</p>
 <h2 id="minting-and-burning"><a class="header" href="#minting-and-burning">Minting and burning</a></h2>
 <p>SHRM tokens will be minted by one of the following tasks:</p>
 <ul>
@@ -239,7 +239,7 @@ These tokens will be distributed as the following:</p>
     data: [
       {
         category: "founder",
-        share: "1500000",
+        share: "1750000",
         color: "#495fba"
       },
       {
@@ -256,11 +256,6 @@ These tokens will be distributed as the following:</p>
         category: "Liquidity",
         share: "750000",
         color: "#c9f0e1"
-      },
-      {
-        category: "Airdrops",
-        share: "250000",
-        color: "#d48652"
       }
     ],
     legend: {
@@ -269,11 +264,13 @@ These tokens will be distributed as the following:</p>
       }
     },
     numberFormatter: {
-      numberFormat: "#.0a"
+      numberFormat: "#.##a"
     },
   }, "token-distribution-chart", am4charts.PieChart3D);
 </script>
 <div id="token-distribution-chart" style="width: 100%; height: 400px; background-color: #282828;" ></div>
+<h2 id="airdrop--nft-sale"><a class="header" href="#airdrop--nft-sale">Airdrop &amp; NFT sale</a></h2>
+<p>...</p>
 <h2 id="initial-dex-offering-ido"><a class="header" href="#initial-dex-offering-ido">Initial DEX Offering (IDO)</a></h2>
 <p>An Initial DEX Offering is planned to launch on <a href="//skyward.finance/" target="_blank" rel="noreferrer noopener">
 Skyward Finance<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
