deploy: b9ebbc0570773e770ca6631edb2fa0a4cbf07d1f

--- a/1_Introduction.html
+++ b/1_Introduction.html
@@ -152,11 +152,13 @@
 <a href="//twitter.com/shrm_kingdom" target="_blank" rel="noreferrer noopener"><img src="https://img.shields.io/twitter/follow/shrm_kingdom?style=for-the-badge&amp;logo=twitter&amp;label=Twitter&amp;color=00acee" alt="Twitter" /></a>
 <a href="//discord.gg/SPZsgSe" target="_blank" rel="noreferrer noopener"><img src="https://img.shields.io/discord/168893527357521920?label=Discord&amp;logo=discord&amp;color=7289da&amp;style=for-the-badge" alt="Discord" /></a>
 <a href="//github.com/Shroom-Kingdom" target="_blank" rel="noreferrer noopener"><img src="https://img.shields.io/github/stars/Shroom-Kingdom?logo=github&amp;label=Github&amp;style=for-the-badge" alt="GitHub" /></a></p>
-<p>Shroom Kingdom is a building and jump'n'run game inspired by Super Mario where anyone can earn tokens by participating
-in the game.</p>
+<p>Shroom Kingdom is a building and jump'n'run game, that is inspired by traditional games of the genre.
+Active players will be rewarded with a token by participating in the game.</p>
 <p>All assets that will be used in Shroom Kingdom are user provided.
-To be able to play the game the user must either own a hackable Nintendo Switch and the game Super Mario Maker 2
-or it is alternatively possible to use game modifications with assets that are user created.</p>
+Players can either use the original assets from the game Super Mario Maker 2
+or it is alternatively possible to use game modifications with assets that are user created.
+It is not mandatory to use original assets, since once the game launches a good default of assets will be provided.
+Please read the chapter <a href="3_How_To_Play.html">&quot;How to play&quot;</a> to learn more about the details.</p>
 <p>The main activities in the game are:</p>
 <ul>
 <li><a href="3_Game_Activities/1_Building_Levels.html">Building new levels</a></li>
