--- a/4_User_Onboarding.html
+++ b/4_User_Onboarding.html
@@ -147,7 +147,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="user-onboarding"><a class="header" href="#user-onboarding">User Onboarding</a></h1>
-<p>Shroom Kingdom runs on the <a href="//near.org/" target="_blank" rel="noreferrer noopener">
+<p>Shroom Kingdom runs on the <a href="//near.org/" target="_blank" rel="noopener">
 NEAR Protocol<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
@@ -155,7 +155,7 @@ NEAR Protocol<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" view
 <line x1="10" y1="14" x2="21" y2="3"></line>
 </svg></a> blockchain.
 To use all features of the platform a user must create and connect a
-<a href="//wallet.near.org/" target="_blank" rel="noreferrer noopener">NEAR wallet<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+<a href="//wallet.near.org/" target="_blank" rel="noopener">NEAR wallet<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
 <polyline points="15 3 21 3 21 9"></polyline>
