--- a/5_Game_Activities.html
+++ b/5_Game_Activities.html
@@ -158,7 +158,7 @@
 <h2 id="super-virtual-world"><a class="header" href="#super-virtual-world">Super Virtual World</a></h2>
 <p>In Shroom Kingdom everyone can build his/her own Kingdom!</p>
 <p>Super Virtual Worlds (SVW) are a form of Virtual Lands and are our interpretation of
-<a href="//supermariomaker2.fandom.com/wiki/World_Maker" target="_blank" rel="noreferrer noopener">
+<a href="//supermariomaker2.fandom.com/wiki/World_Maker" target="_blank" rel="noopener">
 Super Worlds<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
