--- a/6_Token_Economics.html
+++ b/6_Token_Economics.html
@@ -184,20 +184,20 @@ or by a combination of both.</p>
 <h2 id="initial-shrm-token-launch--funding"><a class="header" href="#initial-shrm-token-launch--funding">Initial SHRM token launch &amp; funding</a></h2>
 <p>Shroom Kingdom will be community funded.
 No Venture Capital is involved.
-An initial <a href="//www.sputnik.fund/#/dao/humanguild.sputnikdao.near/proposals/25" target="_blank" rel="noreferrer noopener">
+An initial <a href="//www.sputnik.fund/#/dao/humanguild.sputnikdao.near/proposals/25" target="_blank" rel="noopener">
 funding round<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
 <polyline points="15 3 21 3 21 9"></polyline>
 <line x1="10" y1="14" x2="21" y2="3"></line>
 </svg></a> also happened with
-<a href="//humanguild.io/" target="_blank" rel="noreferrer noopener">Human Guild<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+<a href="//humanguild.io/" target="_blank" rel="noopener">Human Guild<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
 <polyline points="15 3 21 3 21 9"></polyline>
 <line x1="10" y1="14" x2="21" y2="3"></line>
 </svg></a>.</p>
-<p>For the initial distribution of the token, 10 million SHRM tokens will be minted on launch.
+<p>For the initial distribution of the token, 15 million SHRM tokens will be minted on launch.
 These tokens will be distributed as the following:</p>
 <script type="text/javascript" src="//cdn.amcharts.com/lib/4/core.js"></script>
 <script type="text/javascript" src="//cdn.amcharts.com/lib/4/charts.js"></script>
@@ -239,22 +239,22 @@ These tokens will be distributed as the following:</p>
     data: [
       {
         category: "founder",
-        share: "1750000",
+        share: "1500000",
         color: "#495fba"
       },
       {
         category: "DAO",
-        share: "4500000",
+        share: "7875000",
         color: "#e8d685"
       },
       {
         category: "IDO",
-        share: "3000000",
+        share: "4500000",
         color: "#ae85c9"
       },
       {
         category: "Liquidity",
-        share: "750000",
+        share: "1125000",
         color: "#c9f0e1"
       }
     ],
@@ -264,15 +264,50 @@ These tokens will be distributed as the following:</p>
       }
     },
     numberFormatter: {
-      numberFormat: "#.##a"
+      numberFormat: "#.###a"
     },
   }, "token-distribution-chart", am4charts.PieChart3D);
 </script>
 <div id="token-distribution-chart" style="width: 100%; height: 400px; background-color: #282828;" ></div>
-<h2 id="airdrop--nft-sale"><a class="header" href="#airdrop--nft-sale">Airdrop &amp; NFT sale</a></h2>
-<p>...</p>
+<p>The launch of the token will be initiated via a DAO vote on
+<a href="//v2.sputnik.fund/#/shrm.sputnik-dao.near" target="_blank" rel="noopener">SputnikDAO
+<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
+<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+<polyline points="15 3 21 3 21 9"></polyline>
+<line x1="10" y1="14" x2="21" y2="3"></line>
+</svg></a>.</p>
+<p>The founder's share will be unlocked linearly over 6 years, which results in about 685 tokens per day.</p>
+<h2 id="airdrops"><a class="header" href="#airdrops">Airdrops</a></h2>
+<p>A token airdrop has been <a href="//shroomkingdom.net/blog/roadmap/" target="_blank" rel="noopener">
+announced<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
+<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+<polyline points="15 3 21 3 21 9"></polyline>
+<line x1="10" y1="14" x2="21" y2="3"></line>
+</svg></a> on October 01, 2021.
+The airdrop distribution will immediately follow the token launch and will also be distributed via several DAO proposals.
+The proposals will trigger Smart Contract function calls, which will directly transfer the tokens to eligible accounts.
+The airdrop is meant to support Near early adopters as explained in this
+<a href="//gov.near.org/t/token-airdrops-from-new-projects-of-near-ecosystem-to-near-early-supporters/184/" target="_blank" rel="noopener">
+forum thread<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
+<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+<polyline points="15 3 21 3 21 9"></polyline>
+<line x1="10" y1="14" x2="21" y2="3"></line>
+</svg></a>.</p>
+<p>An NFT airdrop is also planned with a special founder NFT, which has been
+<a href="//shroomkingdom.net/blog/nft-airdrop/" target="_blank" rel="noopener">announced<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
+<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+<polyline points="15 3 21 3 21 9"></polyline>
+<line x1="10" y1="14" x2="21" y2="3"></line>
+</svg></a>
+on September 06, 2021.
+The founder NFT will unlock traits, that can give lifetime boosts to token earnings.
+To unlock traits users need to use a generated referral link to advertise for new members for the platform.</p>
 <h2 id="initial-dex-offering-ido"><a class="header" href="#initial-dex-offering-ido">Initial DEX Offering (IDO)</a></h2>
-<p>An Initial DEX Offering is planned to launch on <a href="//skyward.finance/" target="_blank" rel="noreferrer noopener">
+<p>An Initial DEX Offering is planned to launch on <a href="//skyward.finance/" target="_blank" rel="noopener">
 Skyward Finance<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
@@ -340,13 +375,11 @@ The revenue of the IDO will be distributed as the following:</p>
   }, "ido-chart", am4charts.PieChart3D);
 </script>
 <div id="ido-chart" style="width: 100%; height: 400px; background-color: #282828;" ></div>
-<p>The IDO will be launched in three phases with increasing token amount,
-because more people will become interested over time about Shroom Kingdom.
-The exact token amounts are:</p>
+<p>The IDO will be launched in three phases as following:</p>
 <ul>
-<li>750,000 SHRM (date will be announced)</li>
-<li>1,000,000 SHRM (two months later)</li>
-<li>1,250,000 SHRM (two months later)</li>
+<li>1,500,000 SHRM (date will be announced)</li>
+<li>1,500,000 SHRM (two months later)</li>
+<li>1,500,000 SHRM (two months later)</li>
 </ul>
 <h2 id="smart-contract-details"><a class="header" href="#smart-contract-details">Smart Contract details</a></h2>
 <p>The SHRM token Smart Contract needs to be able to mint tokens on demand.
