--- a/8_DAO.html
+++ b/8_DAO.html
@@ -159,7 +159,7 @@ are supposed to make decisions that represent the community in a pre-determined 
 rather than making decisions for their own good.
 The community then can make proposals that are then voted for or against within these guidelines.</p>
 <h2 id="the-shroom-kingdom-dao"><a class="header" href="#the-shroom-kingdom-dao">The Shroom Kingdom DAO</a></h2>
-<p>For Shroom Kingdom <a href="//v2.sputnik.fund/#/shrm.sputnik-dao.near" target="_blank" rel="noreferrer noopener">
+<p>For Shroom Kingdom <a href="//v2.sputnik.fund/#/shrm.sputnik-dao.near" target="_blank" rel="noopener">
 Sputnik DAO<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
@@ -172,7 +172,7 @@ More members will be added as the project grows and matures.</p>
 <p>The members of the DAO or temporary supporters of the project will be able to receive payouts via Sputnik DAO,
 that will be approved by the council or specific members of it.
 Applications to join the DAO can be made on Shroom Kingdom's
-<a href="//discord.gg/SPZsgSe" target="_blank" rel="noreferrer noopener">Discord server<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+<a href="//discord.gg/SPZsgSe" target="_blank" rel="noopener">Discord server<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
 <polyline points="15 3 21 3 21 9"></polyline>
@@ -182,7 +182,7 @@ where you can find a list of open positions and available tasks.</p>
 <h2 id="workload-and-payouts"><a class="header" href="#workload-and-payouts">Workload And Payouts</a></h2>
 <p>The payout will be in SHRM and depends on the task and position.
 After the succesful launch of the IDO, it will also be possible to get payouts in NEAR for certain tasks and positions.
-In general, to receive payouts you need a <a href="//wallet.near.org/" target="_blank" rel="noreferrer noopener">
+In general, to receive payouts you need a <a href="//wallet.near.org/" target="_blank" rel="noopener">
 NEAR wallet<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor"
   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link">
 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
