--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                     <main>
                         <h1 id="shroom-kingdom"><a class="header" href="#shroom-kingdom">Shroom Kingdom</a></h1>
 <p><em>Official Shroom Kingdom Whitepaper <strong>DRAFT</strong></em></p>
-<p><a href="//shroomkingdom.net/" target="_blank" rel="noreferrer noopener"><img src="https://img.shields.io/static/v1?label=Website&amp;message=%20&amp;style=for-the-badge" alt="Website" /></a>
-<a href="//twitter.com/shrm_kingdom" target="_blank" rel="noreferrer noopener"><img src="https://img.shields.io/twitter/follow/shrm_kingdom?style=for-the-badge&amp;logo=twitter&amp;label=Twitter&amp;color=00acee" alt="Twitter" /></a>
-<a href="//discord.gg/SPZsgSe" target="_blank" rel="noreferrer noopener"><img src="https://img.shields.io/discord/168893527357521920?label=Discord&amp;logo=discord&amp;color=7289da&amp;style=for-the-badge" alt="Discord" /></a>
-<a href="//github.com/Shroom-Kingdom" target="_blank" rel="noreferrer noopener"><img src="https://img.shields.io/github/stars/Shroom-Kingdom?logo=github&amp;label=Github&amp;style=for-the-badge" alt="GitHub" /></a></p>
+<p><a href="//shroomkingdom.net/" target="_blank" rel="noopener"><img src="https://img.shields.io/static/v1?label=Website&amp;message=%20&amp;style=for-the-badge" alt="Website" /></a>
+<a href="//twitter.com/shrm_kingdom" target="_blank" rel="noopener"><img src="https://img.shields.io/twitter/follow/shrm_kingdom?style=for-the-badge&amp;logo=twitter&amp;label=Twitter&amp;color=00acee" alt="Twitter" /></a>
+<a href="//discord.gg/SPZsgSe" target="_blank" rel="noopener"><img src="https://img.shields.io/discord/168893527357521920?label=Discord&amp;logo=discord&amp;color=7289da&amp;style=for-the-badge" alt="Discord" /></a>
+<a href="//github.com/Shroom-Kingdom" target="_blank" rel="noopener"><img src="https://img.shields.io/github/stars/Shroom-Kingdom?logo=github&amp;label=Github&amp;style=for-the-badge" alt="GitHub" /></a></p>
 <p>Shroom Kingdom is a building and jump'n'run game, that is inspired by traditional games of the genre.
 Active players will be rewarded with a token by participating in the game.</p>
 <p>All assets that will be used in Shroom Kingdom are user provided.
