--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@ Please read the chapter <a href="3_How_To_Play.html">&quot;How to play&quot;</a>
 <ul>
 <li><a href="3_Game_Activities/1_Building_Levels.html">Building new levels</a></li>
 <li><a href="3_Game_Activities/2_Playing_Levels.html">Playing existing levels</a></li>
-<li><a href="3_Game_Activities/3_Challenges.html">Participating in challenges to win leaderboard prices</a></li>
-<li><a href="3_Game_Activities/4_Super_Virtual_World.html">Super Virtual Worlds</a></li>
+<li><a href="3_Game_Activities/3_Challenges.html">Participating in challenges to win leaderboard prices</a> <!-- - [Super Virtual Worlds](3_Game_Activities/4_Super_Virtual_World.md) --></li>
+<li><a href="5_Game_Activities.html#super-virtual-world">Super Virtual Worlds</a></li>
 </ul>
 <p>Players can earn tokens by participating in these game activities.
 The native token that will be used for all activities is called Shroom (SHRM).
 Since SHRM tokens will be provided for playing the game, there won't be an upper limit.
-The exact token economics are explained in <a href="4_Token_Economics.html">its chapter</a>.</p>
+The exact token economics are explained in <a href="6_Token_Economics.html">its chapter</a>.</p>
 
                     </main>
 
